Fixes for Alt mode launching.